port to 1.20-pre1